Messages and other config...
Added messages.properties file
Added stub for conditions.js

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -1,2 +1,22 @@
-conditionui.title=ConditionUI
+conditionui.title=Condition UI Module
 conditionui.refapp.title=ConditionUI Reference Application
+conditionui.manage=Manage module
+conditionui.conditions=Conditions
+conditionui.condition=Condition
+conditionui.status=Status
+conditionui.onsetdate=On Set Date
+conditionui.lastUpdated=Last Updated
+conditionui.addNewCondition=Add New Condition
+conditionui.noKnownCondition=No Known Condition
+conditionui.noKnownConditions=No Known Conditions
+conditionui.newCondition=New Condition
+conditionui.message.success=Saved changes
+conditionui.message.fail=Failed to save changes
+conditionui.message.duplicateCondition=Patient already has the {0} condition. Please cancel or save a new condition
+conditionui.active=Active
+conditionui.inactive=Inactive
+conditionui.historyof=History Of
+conditionui.addNewCondition.success=New Condition Saved Successfully
+conditionui.removeCondition=Remove Condition
+conditionui.removeCondition.message=Are you sure you want to remove {0} condition for this patient?
+conditionui.editCondition=Edit Condition: {0}
