Update status functional - not tested

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -13,10 +13,11 @@ conditionui.newCondition=New Condition
 conditionui.message.success=Saved changes
 conditionui.message.fail=Failed to save changes
 conditionui.message.duplicateCondition=Patient already has the {0} condition. Please cancel or save a new condition
-conditionui.active=Active
-conditionui.inactive=Inactive
-conditionui.historyof=History Of
+conditionui.active=Make Active
+conditionui.inactive=Make Inactive
+conditionui.historyof=Move to History
 conditionui.addNewCondition.success=New Condition Saved Successfully
 conditionui.removeCondition=Remove Condition
 conditionui.removeCondition.message=Are you sure you want to remove {0} condition for this patient?
 conditionui.editCondition=Edit Condition: {0}
+conditionui.showVoided=Show Voided
