1. Setup angular files and dependencies 2.Tweak 'Add Condition' gsp page 3.Clean up files

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -21,3 +21,6 @@ conditionui.removeCondition=Remove Condition
 conditionui.removeCondition.message=Are you sure you want to remove {0} condition for this patient?
 conditionui.editCondition=Edit Condition: {0}
 conditionui.showVoided=Show Voided
+conditionui.active.label=ACTIVE
+conditionui.inactive.label=INACTIVE
+conditionui.historyof.label=HISTORY_OF
