1. Completed 'Add Condition' page 2. Completed 'Manage Conditions' page

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -2,6 +2,7 @@ conditionui.title=Condition UI Module
 conditionui.refapp.title=ConditionUI Reference Application
 conditionui.manage=Manage module
 conditionui.conditions=Conditions
+conditionui.manageConditions=Manage Conditions
 conditionui.condition=Condition
 conditionui.status=Status
 conditionui.onsetdate=On Set Date
@@ -16,7 +17,8 @@ conditionui.message.duplicateCondition=Patient already has the {0} condition. Pl
 conditionui.active=Make Active
 conditionui.inactive=Make Inactive
 conditionui.historyof=Move to History
-conditionui.addNewCondition.success=New Condition Saved Successfully
+conditionui.condition.success=Condition Saved Successfully
+conditionui.condition.error=Error Saving condition
 conditionui.removeCondition=Remove Condition
 conditionui.removeCondition.message=Are you sure you want to remove {0} condition for this patient?
 conditionui.editCondition=Edit Condition: {0}
@@ -24,3 +26,4 @@ conditionui.showVoided=Show Voided
 conditionui.active.label=ACTIVE
 conditionui.inactive.label=INACTIVE
 conditionui.historyof.label=HISTORY_OF
+conditionui.undo=Undo delete
