Strike through text on voided entries

--- a/api/src/main/resources/messages.properties
+++ b/api/src/main/resources/messages.properties
@@ -17,8 +17,8 @@ conditionui.message.duplicateCondition=Patient already has the {0} condition. Pl
 conditionui.active=Make Active
 conditionui.inactive=Make Inactive
 conditionui.historyof=Move to History
-conditionui.condition.success=Condition Saved Successfully
-conditionui.condition.error=Error Saving condition
+conditionui.updateCondition.success=Condition Saved Successfully
+conditionui.updateCondition.error=Error Saving condition
 conditionui.removeCondition=Remove Condition
 conditionui.removeCondition.message=Are you sure you want to remove {0} condition for this patient?
 conditionui.editCondition=Edit Condition: {0}
@@ -27,3 +27,5 @@ conditionui.active.label=ACTIVE
 conditionui.inactive.label=INACTIVE
 conditionui.historyof.label=HISTORY_OF
 conditionui.undo=Undo delete
+conditionui.activeConditions=Active Conditions
+conditionui.inactiveConditions=Inactive Conditions
